fix oversize carousel on mobile devices

--- a/app/style/lorry.less
+++ b/app/style/lorry.less
@@ -31,11 +31,6 @@ a.text {
 	margin-top: 40px;
 }
 
-
-#front .carousel {
-	height: 417px;
-}
-
 footer {
 	margin-top: 20px;
 }
@@ -141,6 +136,12 @@ h1 small .label {
 		padding-left: 0;
 		padding-right: 0;
 		margin-top: 5px;
+	}
+}
+
+@media (min-width: @screen-lg-min) {
+	#front .carousel {
+		height: 417px;
 	}
 }
 
